--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "dev": "concurrently -n 'build,server' -c 'bgBlue.bold,bgGreen.bold' 'yarn build' 'yarn server'",
-        "build": "webpack --watch",
-        "server": "nodemon ./dist/server"
+        "dev": "concurrently -n 'build:dev,server' -c 'bgBlue.bold,bgGreen.bold' 'yarn build:dev' 'yarn server'",
+        "build:dev": "webpack --config webpack.dev.js --watch",
+        "build:prod": "webpack --config webpack.prod.js -p",
+        "server": "nodemon ./dist/server",
+        "prod": "yarn build:prod && yarn server"
     },
     "devDependencies": {
         "babel-core": "^6.10.4",
@@ -20,6 +22,7 @@
         "less": "^3.0.1",
         "less-loader": "^4.1.0",
         "nodemon": "^1.17.3",
+        "uglifyjs-webpack-plugin": "^1.2.4",
         "webpack": "^3.8.1",
         "webpack-node-externals": "^1.2.0"
     },
