--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "babel-preset-es2015": "^6.24.1",
         "body-parser": "^1.18.2",
         "express": "^4.14.0",
+        "moment-timezone": "^0.5.14",
         "prop-types": "^15.6.1",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
