--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
         "babel-cli": "^6.26.0",
         "babel-preset-es2015": "^6.24.1",
         "body-parser": "^1.18.2",
+        "cors": "^2.8.4",
         "express": "^4.14.0",
+        "isomorphic-fetch": "^2.2.1",
         "moment-timezone": "^0.5.14",
         "prop-types": "^15.6.1",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-redux": "^5.0.7",
         "redux": "^3.7.2",
+        "serialize-javascript": "^1.4.0",
         "styled-components": "^2.2.4"
     }
 }
