--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-redux": "^5.0.7",
+        "react-router-dom": "^4.2.2",
         "redux": "^3.7.2",
         "serialize-javascript": "^1.4.0",
         "styled-components": "^2.2.4"
